@@ -1,5 +1,7 @@
 == (unreleased)
 
+* Rollback of deploy:symlink would explode if there was no previous revision to rollback to [Jamis Buck]
+
 * Fix bug in transfer.rb that caused get/put/upload/download to ignore blocks passed to them [arika]
 
 * Fix issue with git SCM that caused "Unable to resolve revision" errors when there was trailing whitespace in git's output [Mark Zuneska, Daniel Berlinger and Evan Closson]
